traces/bug_320.txt
examples++-load/mmg3d-v4.0.cpp:356: error: DEAD_STORE
  The value written to &BoolMoving (type _Bool) is never used.
Showing all 1 steps of the trace


examples++-load/mmg3d-v4.0.cpp:356:5: Write of unused value
354.     
355.     if( nargs[1] || nargs[2] ){
356.       BoolMoving=1;
           ^
357.       if( nargs[2] ){
358.         Moving = GetAny<double>( (*nargs[2])(stack) );
